# search-server

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/api/: admin.py  auth.py  bookmarks.py  deps.py  documents.py  history.py  preview.py  router.py  search.py  tags.py  users.py  web.py
app/models/: __init__.py  base.py  bookmark.py  chunk.py  file.py  job_log.py  search_history.py  tag.py  user.py
app/opensearch/: __init__.py  client.py  index_manager.py  query_builder.py
app/parsers/: __init__.py  base.py  docx_parser.py  epub_parser.py  hwp_parser.py  ocr_processor.py  pdf_parser.py  pdf_preprocessor.py  quality_checker.py  text_cleaner.py  txt_parser.py
app/schemas/: admin.py  auth.py  bookmark.py  document.py  search.py  user.py
app/services/: __init__.py  auth_service.py  document_service.py  index_service.py  preview_service.py  search_service.py  user_service.py
app/templates/: base.html  document_detail.html  login.html  preview.html  results.html  search.html
docker/: Dockerfile.api  Dockerfile.worker
docker/opensearch/: Dockerfile
migrations/: env.py
opensearch-config/: index_settings.json  synonyms_en.txt  synonyms_ko.txt  user_dict_ko.txt
requirements/: base.txt  constraints.txt  dev.txt  ocr.txt  prod.txt
scripts/: bulk_import.py  create_admin.py  init_opensearch.py  ocr_benchmark.py  parse_and_index.py  quality_report.py  rebuild_index.py
tests/fixtures/: create_samples.py  sample.docx  (+2 more)
workers/: celery_app.py  file_watcher.py
(+29 files in other folders)
